--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,19 @@
             <artifactId>jooby-jackson</artifactId>
             <version>1.2.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <scope>test</scope>
+            <version>3.0.0</version>
+        </dependency>
     </dependencies>
 
 </project>
