added working redis client

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,2 +1,5 @@
 application.secret = totombo
-db = /totombo_db
+# db = redis-17981.c11.us-east-1-3.ec2.cloud.redislabs.com:17981/totombo
+db = "redis://redis-17981.c11.us-east-1-3.ec2.cloud.redislabs.com:17981"
+
+session.timeout = 5h
